# artifacts/api-server/src/routes/index.ts
@@ -21,6 +21,8 @@ import schoolRouter from "./school";
 import consoleRouter from "./console";
 import impersonationRouter from "./impersonation";
 import meetingRecordingsRouter from "./meeting-recordings";
+import agendaRouter from "./agenda";
+import correspondenceRouter from "./correspondence";
 import timeTrackingRouter from "./time-tracking";
 import storageRouter from "./storage";
 import { requireAuth, requireProduct } from "../lib/auth";
@@ -56,6 +58,8 @@ engineRouter.use(qaRouter);
 engineRouter.use(standardsRouter);
 engineRouter.use(intakeRouter);
 engineRouter.use(meetingRecordingsRouter);
+engineRouter.use(agendaRouter);
+engineRouter.use(correspondenceRouter);
 engineRouter.use(timeTrackingRouter);
 engineRouter.use(buildersRouter);
 engineRouter.use(allocationsRouter);
